--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,20 +26,16 @@
     android:layout_weight="1"
     android:orientation="vertical"
     android:layout_marginTop="20dp">
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginLeft="20dp"
-        android:hint="Enter Your Name"
-        android:padding="4dp"
-        android:background="@drawable/border"
-        android:inputType="textPersonName" />
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
+        android:id="@+id/ccp"
+        android:layout_width="28dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp" />
     <EditText
         android:id="@+id/editText3"
         android:padding="4dp"
@@ -47,7 +43,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:ems="10"
-        android:layout_marginLeft="20dp"
+
         android:layout_marginTop="20dp"
         android:hint="Enter Your Mobile No."
         android:inputType="phone" />
@@ -62,5 +58,48 @@
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/button1"></ImageButton>
 </LinearLayout>
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginLeft="48.5dp"
+        android:layout_marginTop="30dp"
+        android:hint="Enter OTP"
+        android:padding="4dp"
+        android:visibility="invisible"
+        android:background="@drawable/border"
+        android:inputType="number" />
+    <Button
+        android:id="@+id/resendOtpBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Resend"
+        android:textColor="#000000"
+        android:paddingTop="10dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"></Button>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="50dp"/>
+    <TextView
+        android:id="@+id/state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
+        android:text="Sending OTP.."
+        android:textColor="#969384"
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:visibility="invisible"></TextView>
 </LinearLayout>
+
+
 </LinearLayout>
