--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -91,7 +91,7 @@
 
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button37"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -99,5 +99,14 @@
             android:text="SUBMIT"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#000000" />
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="20dp"
+            android:visibility="invisible"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </ScrollView>
