--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,42 @@
 
 
         ></ImageView>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        l̥
+        <Button
+            android:id="@+id/button1"
+            android:layout_below="@+id/signup"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="As Customer"
+            android:textSize="20sp"
+            android:background="#FFEB3B"
+            android:padding="5dp"
+            android:layout_marginLeft="30dp"/>
+
+        <View
+            android:id="@+id/strip"
+            android:layout_width="3dp"
+            android:layout_height="55dp"
+            android:layout_below="@+id/signup"
+            android:layout_toRightOf="@+id/button1"
+            android:background="#A9000000"
+            android:layout_marginLeft="25dp"></View>
+        <Button
+            android:id="@+id/button2"
+            android:layout_below="@+id/signup"
+            android:layout_toRightOf="@+id/strip"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="As Driver"
+            android:textSize="20sp"
+            android:background="#FFEB3B"
+            android:padding="5dp"
+            android:layout_marginLeft="30dp"/>
+    </RelativeLayout>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="0dp"
@@ -35,7 +71,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:visibility="invisible"/>
     <EditText
         android:id="@+id/editText3"
         android:padding="4dp"
@@ -43,7 +80,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:ems="10"
-
+        android:visibility="invisible"
         android:layout_marginTop="20dp"
         android:hint="Enter Your Mobile No."
         android:inputType="phone" />
@@ -54,6 +91,7 @@
         android:layout_height="29dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
+        android:visibility="invisible"
         android:background="@drawable/back1"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/button1"></ImageButton>
