--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsActivity" />
+    tools:context=".MapsActivity" >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:weightSum="10"
+      android:padding="16dp"
+      android:orientation="horizontal">
+      <com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch
+          android:layout_width="0dp"
+          android:id="@+id/location_switch"
+          android:layout_weight="3"
+          android:layout_height="wrap_content"
+          app:icon_release="@drawable/ic_action_name"
+          app:icon_press="@drawable/ic_action_name1"
+          app:base_release_color="@color/baseReleaseColor"
+          app:base_press_color="@color/ballPresscolor"
+          app:ball_release_color="@color/ballReleaseColor"
+          app:ball_press_color="#ffffff"
+></com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch>
+  </LinearLayout>
+    </RelativeLayout>
+</fragment>
