--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,34 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsActivity" >
+    tools:context=".MapsActivity"
+    tools:layout="@layout/activity_maps">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:weightSum="10"
-      android:padding="16dp"
-      android:orientation="horizontal">
-      <com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch
-          android:layout_width="0dp"
-          android:id="@+id/location_switch"
-          android:layout_weight="3"
-          android:layout_height="wrap_content"
-          app:icon_release="@drawable/ic_action_name"
-          app:icon_press="@drawable/ic_action_name1"
-          app:base_release_color="@color/baseReleaseColor"
-          app:base_press_color="@color/ballPresscolor"
-          app:ball_release_color="@color/ballReleaseColor"
-          app:ball_press_color="#ffffff"
-></com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch>
-  </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:cardElevation="10dp">
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <Switch
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:id="@+id/location_switch"
+                    android:textOff="@string/offline"
+                    android:textOn="@string/online"/>
+
+                <Button
+                    android:id="@+id/btn_find_user"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7"
+                    android:text="@string/find_user" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </RelativeLayout>
 </fragment>
