--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -25,7 +25,7 @@
             android:id="@+id/btnGo"
             android:text="GO"
             android:layout_weight="1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"></Button>
     </LinearLayout>
     <fragment
