--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="bottomText">#6b6b76</color>
+    <color name="rippleEffectColor">#f816a463</color>
+    <color name="btnSigIn">#1fbad6</color>
+    <color name="btnRegister">#83838c</color>
+    <color name="dividerColor">#1F000000</color>
     <color name="baseReleaseColor">#212121</color>
     <color name="ballPresscolor">#fafafa</color>
     <color name="ballReleaseColor">#9e9e9e</color>
