--- a/app/src/main/res/layout/app_bar_nav_drawer.xml
+++ b/app/src/main/res/layout/app_bar_nav_drawer.xml
@@ -40,12 +40,13 @@
                     android:src="@drawable/ic_pin_drop_black_24dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
-                <fragment
+                <Button
                     android:id="@+id/place_location"
                     android:layout_weight="5"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
+                    android:text="Search Pickup location"
+                    android:background="#99FFC107"></Button>
 
             </LinearLayout>
 
@@ -58,6 +59,7 @@
 
             <LinearLayout
                 android:weightSum="6"
+                android:layout_marginTop="12dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -67,12 +69,13 @@
                     android:src="@drawable/ic_map_black_24dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
-                <fragment
+                <Button
                     android:id="@+id/place_destination"
                     android:layout_weight="5"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
+                    android:text="Search Drop location"
+                    android:background="#99FFC107"></Button>
 
             </LinearLayout>
 
