--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -3,16 +3,6 @@
     <menu tools:showIn="@layout/activity_customer" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <group android:checkableBehavior="single">
-
-    <item android:title="Home" android:icon="@drawable/ic_home_black_24dp" android:id="@+id/nav_home"/>
-
-    <item android:title="Profile" android:icon="@drawable/ic_person_black_24dp" android:id="@+id/nav_profile"/>
-
-    <item android:title="Settings" android:icon="@drawable/ic_settings_black_24dp" android:id="@+id/nav_settings"/>
-
-    <item android:title="Sign Out" android:icon="@drawable/ic_exit_to_app_black_24dp" android:id="@+id/nav_signout"/>
-
-</group>
+    <item android:title="Log Out" android:icon="@drawable/ic_exit_to_app_black_24dp" android:id="@+id/nav_signout"/>
 
 </menu>
