--- a/app/src/main/res/layout/nav_header_nav_drawer.xml
+++ b/app/src/main/res/layout/nav_header_nav_drawer.xml
@@ -7,6 +7,7 @@
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:visibility="invisible"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="16dp"
