--- a/app/src/main/res/layout/activity_custommer_call.xml
+++ b/app/src/main/res/layout/activity_custommer_call.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".CustommerCall">
 
+    <TextView
+        android:id="@+id/txt_count_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="30"
+        android:layout_above="@+id/map_image"
+        android:textColor="@android:color/white"
+        android:textSize="50sp"></TextView>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/map_image"
         android:layout_width="200dp"
