--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,9 @@
             android:layout_below="@+id/signup"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="As Customer"
+            android:text="Customer"
             android:textSize="20sp"
-            android:background="#FFEB3B"
+            android:background="@drawable/corner"
             android:padding="5dp"
             android:layout_marginLeft="30dp"/>
 
@@ -50,9 +50,9 @@
             android:layout_toRightOf="@+id/strip"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="As Driver"
+            android:text="Driver"
             android:textSize="20sp"
-            android:background="#FFEB3B"
+            android:background="@drawable/corner"
             android:padding="5dp"
             android:layout_marginLeft="30dp"/>
     </RelativeLayout>
