--- a/app/src/main/res/layout/activity_signdriver.xml
+++ b/app/src/main/res/layout/activity_signdriver.xml
@@ -24,16 +24,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         >
+
         <Button
             android:id="@+id/button2"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="As Driver"
-            android:textSize="20sp"
-            android:background="#FFEB3B"
-            android:padding="5dp"
             android:layout_marginLeft="30dp"
-            android:visibility="invisible"/>
+            android:background="@drawable/corner"
+            android:padding="5dp"
+            android:text="Driver"
+            android:textSize="20sp" />
     </RelativeLayout>
     <LinearLayout
         android:layout_width="wrap_content"
