--- a/app/src/main/res/layout/activity_custommer_call.xml
+++ b/app/src/main/res/layout/activity_custommer_call.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustommerCall">
+    tools:context=".CustomerCall">
 
     <TextView
         android:id="@+id/txt_count_down"
