--- a/app/src/main/res/layout/custom_rider_info_window.xml
+++ b/app/src/main/res/layout/custom_rider_info_window.xml
@@ -16,8 +16,8 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content">
 
-    <ImageView
-
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/pic"
         android:layout_weight="2"
         android:layout_gravity="center_vertical|center_horizontal"
         android:src="@drawable/ic_account_circle_black_24dp"
@@ -39,7 +39,8 @@
                 android:layout_weight="8"
                 android:textStyle="bold"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
             <TextView
                 android:id="@+id/txtPickupSnippet"
                 android:text="Pickup Here"
